[package]
name = "aoe2maps"
version = "0.1.0"
authors = ["Perjéssy Lóránt <lostlont@lostlont.hu>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
closure = "0.3.0"
yew = "0.17.3"
wasm-bindgen = "0.2.73"
web-sys = {	version = "0.3.50", features = ["CssStyleDeclaration", "Document", "HtmlElement", "Window"] }

[profile.release]
codegen-units=1
